# ai-cookbook

agent/: README.md  main.py  pyproject.toml  tools.py
finetune/: .aider.chat.history.md  .aider.input.history  README.md  main.py  pyproject.toml  train_data.jsonl
finetune/.aider.tags.cache.v3/: cache.db
local-llm/: main.py  pyproject.toml
mcp/: client.py  pyproject.toml  server.py
rag/: .gitignore  README.md  main.py  pyproject.toml
