[project]
name = "local-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.3.0",
    "ipython>=8.31.0",
    "mypy>=1.14.1",
    "numpy>=2.2.2",
    "ollama>=0.4.7",
    "pillow>=11.1.0",
    "ruff>=0.9.3",
    "scipy>=1.15.1",
    "torch>=2.5.1",
    "transformers>=4.48.1",
]
