[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "httpx>=0.28.1",
    "ipython>=9.0.2",
    "mcp[cli]>=1.5.0",
    "mypy>=1.15.0",
    "python-lsp-server>=1.12.2",
    "ruff>=0.11.2",
    "shodan>=1.31.0",
]
